# pipex

./: .gitignore  .gpg-id  CMakeLists.txt  Makefile  a.c  a.out  infile.x  main_bonus.c  outfile  pipex  pipex.c  pipex_bonus
a.out.dSYM/Contents/Resources/DWARF/: a.out
bonus/: main_bonus.c
bonus/include/: pipex_bonus.h  pipex_types_bonus.h
bonus/src/: arr_utils_bonus.c  assert_bonus.c  cmd_list_bonus.c  executing_bonus.c  parsing_bonus.c  pipex_utils_bonus.c
include/: cmd_utils.h  libft_utils.h  pipex.h  pipex_bonus.h  pipex_utils.h  types_bonus.h
libs/libft/: Makefile  ft_isquote.c  ft_isspace.c  ft_strlen.c  ft_toupper.c  libft.h
mandatory/: main.c
mandatory/include/: pipex.h  pipex_types.h
mandatory/src/: arr_utils.c  assert.c  cmd_list.c  executing.c  parsing.c  pipex_utils.c
src/: arr_utils_bonus.c  assert_bonus.c  cmd_list_bonus.c  cmd_utils.c  executing_bonus.c  helpers_utils_bonus.c  libft_utils.c  parsing_bonus.c  pipex_utils.c  pipex_utils_bonus.c
